--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/richusony/ChatWave/issues"
   },
-  "homepage": "https://github.com/richusony/ChatWave#readme"
+  "homepage": "https://github.com/richusony/ChatWave#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.2",
+    "socket.io": "^4.7.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  }
 }
