--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
