--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "ChatWave: Connect instantly, converse seamlessly. Engage in lively, real-time conversations. Effortless communication for socializing, collaborating, and connecting.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+  "start": "nodemon node index"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/richusony/ChatWave#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.1.2",
     "socket.io": "^4.7.4"
