--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "ChatWave: Connect instantly, converse seamlessly. Engage in lively, real-time conversations. Effortless communication for socializing, collaborating, and connecting.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-  "start": "nodemon node index"
+    "start": "nodemon node index"
   },
   "repository": {
     "type": "git",
@@ -18,11 +19,14 @@
   },
   "homepage": "https://github.com/richusony/ChatWave#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "mongoose": "^8.1.2",
-    "socket.io": "^4.7.4"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.4",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
